--- a/src/main/resources/templates/customer-template/ban-hang-customer.html
+++ b/src/main/resources/templates/customer-template/ban-hang-customer.html
@@ -221,7 +221,7 @@
                         <span class="icon-refresh2"></span>
                     </div>
                     <div class="text">
-                        <h2 class="text-uppercase">Trả hàng miễn phí</h2>
+                        <h2 class="text-uppercase">Giá cả hợp lý</h2>
                         <!-- <p>
                       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                       Phasellus at iaculis quam. Integer accumsan tincidunt
