--- a/src/main/resources/templates/customer-template/ban-hang-customer.html
+++ b/src/main/resources/templates/customer-template/ban-hang-customer.html
@@ -198,7 +198,7 @@
                         <i class="fa-solid fa-rotate"></i>
                     </div>
                     <div class="text">
-                        <h2 class="text-uppercase">Trả hàng miễn phí</h2>
+                        <h2 class="text-uppercase">SẢN PHẨM CHẤT LƯỢNG</h2>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-4 d-lg-flex mb-4 mb-lg-0 pl-4" data-aos="fade-up" data-aos-delay="200">
